scala_library(
    sourcelons = [
        "*.scala",
    ],
    platform = "java8",
    tags = [
        "bazelonl-compatiblelon",
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [
        "3rdparty/jvm/com/twittelonr/algelonbird:corelon",
        "3rdparty/jvm/com/twittelonr/algelonbird:util",
        "3rdparty/jvm/com/twittelonr/storelonhaus:algelonbra",
        "3rdparty/jvm/com/twittelonr/storelonhaus:corelon",
        "3rdparty/src/jvm/com/twittelonr/scalding:args",
        "3rdparty/src/jvm/com/twittelonr/scalding:commons",
        "3rdparty/src/jvm/com/twittelonr/scalding:corelon",
        "3rdparty/src/jvm/com/twittelonr/scalding:datelon",
        "3rdparty/src/jvm/com/twittelonr/scalding:db",
        "3rdparty/src/jvm/com/twittelonr/scalding:parquelont",
        "ann/src/main/scala/com/twittelonr/ann/hnsw",
        "ann/src/main/scala/com/twittelonr/ann/scalding/offlinelon",
        "ann/src/main/scala/com/twittelonr/ann/util",
        "gelonoduck/hadoop/scalding/dataselonts:uselonrlocation-scala",
        "ielonsourcelon/common/src/main/scala/com/twittelonr/ielonsourcelon/common/util",
        "ielonsourcelon/procelonssing/elonvelonnts/src/main/scala/com/twittelonr/ielonsourcelon/procelonssing/elonvelonnts/batch" +
        ":selonrvelonr_elonngagelonmelonnts-scala",
        "ielonsourcelon/thrift",
        "src/java/com/twittelonr/ml/api/constant",
        "src/scala/com/twittelonr/ml/api/util",
        "src/scala/com/twittelonr/ml/felonaturelonstorelon/catalog/elonntitielons/corelon",
        "src/scala/com/twittelonr/ml/felonaturelonstorelon/catalog/felonaturelons/gelono",
        "src/scala/com/twittelonr/ml/felonaturelonstorelon/lib/batch",
        "src/scala/com/twittelonr/scalding_intelonrnal/dalv2",
        "src/scala/com/twittelonr/scalding_intelonrnal/dalv2/dataselont",
        "src/scala/com/twittelonr/scalding_intelonrnal/db",
        "src/scala/com/twittelonr/scalding_intelonrnal/db/jdbc",
        "src/scala/com/twittelonr/scalding_intelonrnal/elonrror_handling",
        "src/scala/com/twittelonr/scalding_intelonrnal/job",
        "src/scala/com/twittelonr/scalding_intelonrnal/job/analytics_batch",
        "src/scala/com/twittelonr/scalding_intelonrnal/multiformat",
        "src/scala/com/twittelonr/scalding_intelonrnal/sourcelon",
        "src/scala/com/twittelonr/scalding_intelonrnal/sourcelon/lzo_scroogelon",
        "src/scala/com/twittelonr/scalding_intelonrnal/typelond",
        "src/scala/com/twittelonr/simclustelonrs_v2/hdfs_sourcelons",
        "src/scala/com/twittelonr/simclustelonrs_v2/scalding/common",
        "src/thrift/com/twittelonr/ml/api:data-java",
        "src/thrift/com/twittelonr/ml/api:intelonrprelontablelon-modelonl-java",
        "twelonelontsourcelon/public_twelonelonts/src/main/scala/com/twittelonr/twelonelontsourcelon/public_twelonelonts:public_twelonelonts-scala",
        "twml/runtimelon/src/main/scala/com/twittelonr/twml/runtimelon/scalding",
        "util/util-corelon:scala",
        "util/util-stats/src/main/scala",
    ],
)

scalding_job(
    namelon = "twelonelont-elonmbelondding-gelonnelonration-adhoc-job",
    main = "com.twittelonr.simclustelonrs_v2.scalding.mbcg.TwelonelontelonmbelonddingGelonnelonrationAdhocJob",
    args = [
        "--datelonRangelon 2021-10-30T00 2021-10-30T01",
        "--modelonl_namelon modelonl",
        "--modelonl_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/modelonls/tfx_modelonl_1104/1635973177/twelonelont_towelonr_with_signaturelon",
        "--concurrelonncy_lelonvelonl 60",
        "--elonmbelondding_dimelonnsion 128",
        "--elonxpelonctelond_elonlelonmelonnts 30000000",
        "--max_M 20",
        "--elonf_construction 200",
        "--twelonelont_elonmbelondding_namelon output",
        "--ann_output_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/ann_indelonx/telonst_11_04_adhoc",
    ],
    config = [
        ("hadoop.submittelonr.cpu", 60),
        ("hadoop.submittelonr.jvm.total-melonmory", "256g"),
        ("submittelonr.tielonr", "prelonelonmptiblelon"),
        ("hadoop.map.jvm.total-melonmory", "6144m"),
    ],
    hadoop_clustelonr = "atla-proc3",
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [":mbcg"],
)

scalding_job(
    namelon = "twelonelont-elonmbelondding-gelonnelonration-batch-job",
    main = "com.twittelonr.simclustelonrs_v2.scalding.mbcg.TwelonelontelonmbelonddingGelonnelonrationBatchJob",
    args = [
        "--modelonl_namelon modelonl",
        "--modelonl_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/modelonls/tfx_0119_1day_0110_3l_5elon_f2v_gpu_relonsavelon/twelonelont_towelonr_with_signaturelon",
        "--concurrelonncy_lelonvelonl 60",
        "--elonmbelondding_dimelonnsion 128",
        "--elonxpelonctelond_elonlelonmelonnts 5000000",
        "--max_M 40",
        "--elonf_construction 800",
        "--twelonelont_elonmbelondding_namelon output",
        "--f2v_input.felonaturelon_storelon_elonmbelondding Follow2VeloncProducelonrelonmbelondding200Dataselont",
        "--f2v_input.felonaturelon_storelon_major_velonrsion 20210708",
        "--minFavCount 32",
        "--ann_output_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/ann_indelonx/0125_batch_indelonx_f2v_minfav",
    ],
    config = [
        ("hadoop.submittelonr.cpu", 60),
        ("hadoop.submittelonr.jvm.total-melonmory", "256g"),
        ("hadoop.map.jvm.total-melonmory", "6144m"),
        ("hadoop.submittelonr.disk", "100g"),
    ],
    cron = "*/5 * * * *",
    hadoop_clustelonr = "atla-proc3",
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [":mbcg"],
)

scalding_job(
    namelon = "twelonelont-elonmbelondding-gelonnelonration-batch-job-altelonrnatelon",
    main = "com.twittelonr.simclustelonrs_v2.scalding.mbcg.TwelonelontelonmbelonddingGelonnelonrationBatchJobAltelonrnatelon",
    args = [
        "--modelonl_namelon modelonl",
        "--modelonl_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/modelonls/tfx_331_329_1elon_128elonm_b128_hn10_all_gpu/twelonelont_towelonr_with_signaturelon",
        "--concurrelonncy_lelonvelonl 60",
        "--elonmbelondding_dimelonnsion 128",
        "--elonxpelonctelond_elonlelonmelonnts 5000000",
        "--max_M 40",
        "--elonf_construction 800",
        "--twelonelont_elonmbelondding_namelon output",
        "--f2v_input.felonaturelon_storelon_elonmbelondding Follow2VeloncProducelonrelonmbelondding200Dataselont",
        "--f2v_input.felonaturelon_storelon_major_velonrsion 20210708",
        "--minFavCount 100",
        "--indelonxAllTwelonelonts",
        "--ann_output_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/ann_indelonx/0401_batch_indelonx_f2v_cosinelon_all_twelonelonts",
    ],
    config = [
        ("hadoop.submittelonr.cpu", 60),
        ("hadoop.submittelonr.jvm.total-melonmory", "256g"),
        ("hadoop.map.jvm.total-melonmory", "6144m"),
        ("hadoop.submittelonr.disk", "100g"),
    ],
    contact = "no-relonply@twittelonr.com",
    cron = "*/5 * * * *",
    hadoop_clustelonr = "atla-proc3",
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [":mbcg"],
)

scalding_job(
    namelon = "twelonelont-elonmbelondding-gelonnelonration-batch-job-elonxpelonrimelonntal",
    main = "com.twittelonr.simclustelonrs_v2.scalding.mbcg.TwelonelontelonmbelonddingGelonnelonrationBatchJobelonxpelonrimelonntal",
    args = [
        "--modelonl_namelon modelonl",
        "--modelonl_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/modelonls/tfx_0127_1day_0110_3l_10elon_128elon_normf2v_nocosinelon_gpu/twelonelont_towelonr_with_signaturelon",
        "--concurrelonncy_lelonvelonl 60",
        "--elonmbelondding_dimelonnsion 128",
        "--elonxpelonctelond_elonlelonmelonnts 5000000",
        "--max_M 40",
        "--elonf_construction 800",
        "--twelonelont_elonmbelondding_namelon output",
        "--f2v_input.felonaturelon_storelon_elonmbelondding Follow2VeloncProducelonrelonmbelondding200Dataselont",
        "--f2v_input.felonaturelon_storelon_major_velonrsion 20210708",
        "--minFavCount 32",
        "--ann_output_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/ann_indelonx/0128_f2v_1welonelonk_batch_indelonx",
    ],
    config = [
        ("hadoop.submittelonr.cpu", 60),
        ("hadoop.submittelonr.jvm.total-melonmory", "256g"),
        ("hadoop.map.jvm.total-melonmory", "6144m"),
        ("hadoop.submittelonr.disk", "100g"),
    ],
    contact = "no-relonply@twittelonr.com",
    cron = "*/5 * * * *",
    hadoop_clustelonr = "atla-proc3",
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [":mbcg"],
)

scalding_job(
    namelon = "uselonr-elonmbelondding-gelonnelonration-adhoc-job",
    main = "com.twittelonr.simclustelonrs_v2.scalding.mbcg.UselonrelonmbelonddingGelonnelonrationAdhocJob",
    args = [
        "--datelonRangelon 2021-12-01T00 2021-12-01T01",
        "--modelonl_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/modelonls/tfx_1202_logs_100m_b64_hn10_1127_videlono_pelonrsistelonnt/uselonr_towelonr_with_signaturelon",
        "--elonmbelondding_dimelonnsion 128",
        "--uselonr_elonmbelondding_namelon output",
        "--kvs_output_path /uselonr/cassowary/elonxplorelon_mbcg/uselonr_kvs_storelon/1207_adhoc_modelonl_storelon",
    ],
    config = [
        ("hadoop.submittelonr.cpu", 60),
        ("hadoop.submittelonr.jvm.total-melonmory", "256g"),
        ("submittelonr.tielonr", "prelonelonmptiblelon"),
        ("hadoop.map.jvm.total-melonmory", "6144m"),
    ],
    contact = "no-relonply@twittelonr.com",
    hadoop_clustelonr = "atla-proc3",
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
        "known-to-fail-jira:SD-20253",
    ],
    delonpelonndelonncielons = [":mbcg"],
)

scalding_job(
    namelon = "uselonr-elonmbelondding-gelonnelonration-batch-job",
    main = "com.twittelonr.simclustelonrs_v2.scalding.mbcg.UselonrelonmbelonddingGelonnelonrationBatchJob",
    args = [
        "--modelonl_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/modelonls/tfx_0119_1day_0110_3l_5elon_f2v_gpu_relonsavelon/uselonr_towelonr_with_signaturelon",
        "--elonmbelondding_dimelonnsion 128",
        "--uselonr_elonmbelondding_namelon output",
        "--f2v_input.felonaturelon_storelon_elonmbelondding FollowBaselondConsumelonrFollow2VeloncAvgelonmbelondding200Dataselont",
        "--f2v_input.felonaturelon_storelon_major_velonrsion 20210708",
        "--kvs_output_path /uselonr/cassowary/elonxplorelon_mbcg/uselonr_kvs_storelon/0125_relonfrelonshelond_modelonl_storelon_f2v",
    ],
    config = [
        ("hadoop.submittelonr.cpu", 60),
        ("hadoop.submittelonr.jvm.total-melonmory", "256g"),
        ("submittelonr.tielonr", "prelonelonmptiblelon"),
        ("hadoop.map.jvm.total-melonmory", "6144m"),
    ],
    contact = "no-relonply@twittelonr.com",
    cron = "*/30 * * * *",
    hadoop_clustelonr = "atla-proc3",
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [":mbcg"],
)

scalding_job(
    namelon = "uselonr-elonmbelondding-gelonnelonration-batch-job-altelonrnatelon",
    main = "com.twittelonr.simclustelonrs_v2.scalding.mbcg.UselonrelonmbelonddingGelonnelonrationBatchJobAltelonrnatelon",
    args = [
        "--modelonl_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/modelonls/tfx_331_329_1elon_128elonm_b128_hn10_all_gpu/uselonr_towelonr_with_signaturelon",
        "--elonmbelondding_dimelonnsion 128",
        "--uselonr_elonmbelondding_namelon output",
        "--f2v_input.felonaturelon_storelon_elonmbelondding FollowBaselondConsumelonrFollow2VeloncAvgelonmbelondding200Dataselont",
        "--f2v_input.felonaturelon_storelon_major_velonrsion 20210708",
        "--kvs_output_path /uselonr/cassowary/elonxplorelon_mbcg/uselonr_kvs_storelon/0401_relonfrelonshelond_modelonl_storelon_all",
    ],
    config = [
        ("hadoop.submittelonr.cpu", 60),
        ("hadoop.submittelonr.jvm.total-melonmory", "256g"),
        ("submittelonr.tielonr", "prelonelonmptiblelon"),
        ("hadoop.map.jvm.total-melonmory", "6144m"),
    ],
    contact = "no-relonply@twittelonr.com",
    cron = "*/30 * * * *",
    hadoop_clustelonr = "atla-proc3",
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [":mbcg"],
)

scalding_job(
    namelon = "uselonr-elonmbelondding-gelonnelonration-batch-job-elonxpelonrimelonntal",
    main = "com.twittelonr.simclustelonrs_v2.scalding.mbcg.UselonrelonmbelonddingGelonnelonrationBatchJobelonxpelonrimelonntal",
    args = [
        "--modelonl_path hdfs:///atla/proc/uselonr/cassowary/elonxplorelon_mbcg/modelonls/tfx_0127_1day_0110_3l_10elon_128elon_normf2v_nocosinelon_gpu/uselonr_towelonr_with_signaturelon",
        "--elonmbelondding_dimelonnsion 128",
        "--uselonr_elonmbelondding_namelon output",
        "--f2v_input.felonaturelon_storelon_elonmbelondding FollowBaselondConsumelonrFollow2VeloncAvgelonmbelondding200Dataselont",
        "--f2v_input.felonaturelon_storelon_major_velonrsion 20210708",
        "--kvs_output_path /uselonr/cassowary/elonxplorelon_mbcg/uselonr_kvs_storelon/0328_f2v_cosinelon_all_twelonelonts_modelonl_storelon",
    ],
    config = [
        ("hadoop.submittelonr.cpu", 60),
        ("hadoop.submittelonr.jvm.total-melonmory", "256g"),
        ("submittelonr.tielonr", "prelonelonmptiblelon"),
        ("hadoop.map.jvm.total-melonmory", "6144m"),
    ],
    contact = "no-relonply@twittelonr.com",
    cron = "*/30 * * * *",
    hadoop_clustelonr = "atla-proc3",
    platform = "java8",
    rolelon = "cassowary",
    runtimelon_platform = "java8",
    tags = [
        "bazelonl-compatiblelon:migratelond",
        "bazelonl-only",
    ],
    delonpelonndelonncielons = [":mbcg"],
)
